--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@
     background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/gmHome.jpeg);
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 60%;
 }
 
 .hero-header img {
