--- a/css/style.css
+++ b/css/style.css
@@ -477,3 +477,60 @@
     padding-right: 0;
     border-right: none;
 }
+
+.image-container {
+    position: relative;
+    overflow: hidden;
+    width: 90px; /* Set the desired width */
+    height: 80px; /* Set the desired height */
+  }
+  
+  .image-container img {
+    transition: transform 0.3s ease;
+  }
+  
+  .image-container:hover img {
+    transform: scale(1.2); /* Set the desired scale factor to enlarge the image */
+    cursor: pointer;
+  }
+
+  .image-popup {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    overflow: auto;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  
+  .close-button {
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+  }
+  
+  #popupImage {
+    max-width: 70%;
+    max-height: 70%;
+  }
+  
+  .list-container {
+    display: flex;
+  }
+  
+  .list-container a {
+    display: block;
+    margin-right: 10px; 
+    text-decoration: none;
+  }
+  
