--- a/css/style.css
+++ b/css/style.css
@@ -494,20 +494,31 @@
     cursor: pointer;
   }
 
-  .image-popup {
+  #imagePopup {
     display: none;
     position: fixed;
-    z-index: 9999;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    overflow: auto;
-    align-items: center;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 9999;
     padding: 20px;
+    box-sizing: border-box;
+    overflow: auto;
   }
   
+  #imageContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  
+  #imageContainer img {
+    max-width: 100%;
+    max-height: 100%;
+  }
   
   .close-button {
     color: #fff;
@@ -518,11 +529,7 @@
     right: 20px;
     cursor: pointer;
   }
-  
-  #popupImage {
-    max-width: 70%;
-    max-height: 70%;
-  }
+
   
   .list-container {
     display: flex;
