--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@
 }
 
 .sticky-top.navbar-dark .navbar-brand img {
-    max-height: 45px;
+    max-height: 60px;
 }
 
 @media (max-width: 991.98px) {
@@ -543,12 +543,14 @@
   
   .responsive-heading {
     font-size: 18px; 
+    font-family: 'Centaur';
   }
 
   /* Tablet styles */
   @media (min-width: 810px) {
     .responsive-heading {
       font-size: 36px;
+      font-family: 'Centaur';
     }
   }
   
@@ -556,6 +558,7 @@
   @media (min-width: 1230px) {
     .responsive-heading {
       font-size: 48px;
+      font-family: 'Centaur';
     }
   }
   
