--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@
     }
 
     .navbar-dark .navbar-brand img {
-        max-height: 45px;
+        max-height: 60px;
     }
 }
 
@@ -542,23 +542,83 @@
   }
   
   .responsive-heading {
-    font-size: 18px; 
+    font-size: 14px; 
     font-family: 'Centaur';
   }
 
-  /* Tablet styles */
-  @media (min-width: 810px) {
+  @media (min-width: 340px) {
     .responsive-heading {
-      font-size: 36px;
+      font-size: 16px;
+      font-family: 'Centaur';
+    }
+  }
+
+  @media (min-width: 357px) {
+    .responsive-heading {
+      font-size: 18px;
+      font-family: 'Centaur';
+    }
+  }
+
+  @media (min-width: 374px) {
+    .responsive-heading {
+      font-size: 20px;
+      font-family: 'Centaur';
+    }
+  }
+
+  @media (min-width: 392px) {
+    .responsive-heading {
+      font-size: 22px;
+      font-family: 'Centaur';
+    }
+  }
+
+  @media (min-width: 410px) {
+    .responsive-heading {
+      font-size: 24px;
+      font-family: 'Centaur';
+    }
+  }
+
+  @media (min-width: 428px) {
+    .responsive-heading {
+      font-size: 26px;
+      font-family: 'Centaur';
+    }
+  }
+
+  @media (min-width: 444px) {
+    .responsive-heading {
+      font-size: 28px;
+      font-family: 'Centaur';
+    }
+  }
+
+  @media (min-width: 498px) {
+    .responsive-heading {
+      font-size: 30px;
+      font-family: 'Centaur';
+    }
+  }
+
+  @media (min-width: 498px) {
+    .responsive-heading {
+      font-size: 34px;
+      font-family: 'Centaur';
+    }
+  }
+
+  @media (min-width: 600px) {
+    .responsive-heading {
+      font-size: 40px;
       font-family: 'Centaur';
     }
   }
   
-  /* Desktop styles */
   @media (min-width: 1230px) {
     .responsive-heading {
-      font-size: 48px;
+      font-size: 50px;
       font-family: 'Centaur';
     }
   }
-  
