--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 /********** Template CSS **********/
+@font-face{
+    font-family: 'Custom-Centaur';
+    font-weight: 400;
+    src: url('/assets/fonts/centaur-webfont.woff2') format('woff2'),
+         url('/assets/fonts/centaur-webfont.woff') format('woff');
+}
+
 :root {
     --primary: #FEA116;
     --light: #F1F8FF;
@@ -8,7 +15,7 @@
 .ff-secondary {
     font-family: 'Pacifico', cursive;
 }
-
+ 
 .fw-medium {
     font-weight: 600 !important;
 }
@@ -543,82 +550,81 @@
   
   .responsive-heading {
     font-size: 14px; 
-    font-family: 'Centaur';
+    font-family: 'Custom-Centaur';
   }
 
   @media (min-width: 340px) {
     .responsive-heading {
       font-size: 16px;
-      font-family: 'Centaur';
+      font-family: 'Custom-Centaur';
     }
   }
 
   @media (min-width: 357px) {
     .responsive-heading {
       font-size: 18px;
-      font-family: 'Centaur';
+      font-family: 'Custom-Centaur';
     }
   }
 
   @media (min-width: 374px) {
     .responsive-heading {
       font-size: 20px;
-      font-family: 'Centaur';
+      font-family: 'Custom-Centaur';
     }
   }
 
   @media (min-width: 392px) {
     .responsive-heading {
       font-size: 22px;
-      font-family: 'Centaur';
+      font-family: 'Custom-Centaur';
     }
   }
 
   @media (min-width: 410px) {
     .responsive-heading {
       font-size: 24px;
-      font-family: 'Centaur';
+      font-family: 'Custom-Centaur';
     }
   }
 
   @media (min-width: 428px) {
     .responsive-heading {
       font-size: 26px;
-      font-family: 'Centaur';
+      font-family: 'Custom-Centaur';
     }
   }
 
   @media (min-width: 444px) {
     .responsive-heading {
       font-size: 28px;
-      font-family: 'Centaur';
+      font-family: 'Custom-Centaur';
     }
   }
 
   @media (min-width: 498px) {
     .responsive-heading {
       font-size: 30px;
-      font-family: 'Centaur';
+      font-family: 'Custom-Centaur';
     }
   }
 
   @media (min-width: 498px) {
     .responsive-heading {
       font-size: 34px;
-      font-family: 'Centaur';
+      font-family: 'Custom-Centaur';
     }
   }
 
   @media (min-width: 600px) {
     .responsive-heading {
       font-size: 40px;
-      font-family: 'Centaur';
+      font-family: 'Custom-Centaur';
     }
   }
   
   @media (min-width: 1230px) {
     .responsive-heading {
       font-size: 50px;
-      font-family: 'Centaur';
     }
   }
