--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /********** Template CSS **********/
 @font-face{
-    font-family: 'Custom-Centaur';
-    font-weight: 400;
+    font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     src: url('/assets/fonts/centaur-webfont.woff2') format('woff2'),
          url('/assets/fonts/centaur-webfont.woff') format('woff');
+    font-weight: 400;
 }
 
 :root {
@@ -550,76 +550,76 @@
   
   .responsive-heading {
     font-size: 14px; 
-    font-family: 'Custom-Centaur';
+    font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
   }
 
   @media (min-width: 340px) {
     .responsive-heading {
       font-size: 16px;
-      font-family: 'Custom-Centaur';
+      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     }
   }
 
   @media (min-width: 357px) {
     .responsive-heading {
       font-size: 18px;
-      font-family: 'Custom-Centaur';
+      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     }
   }
 
   @media (min-width: 374px) {
     .responsive-heading {
       font-size: 20px;
-      font-family: 'Custom-Centaur';
+      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     }
   }
 
   @media (min-width: 392px) {
     .responsive-heading {
       font-size: 22px;
-      font-family: 'Custom-Centaur';
+      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     }
   }
 
   @media (min-width: 410px) {
     .responsive-heading {
       font-size: 24px;
-      font-family: 'Custom-Centaur';
+      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     }
   }
 
   @media (min-width: 428px) {
     .responsive-heading {
       font-size: 26px;
-      font-family: 'Custom-Centaur';
+      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     }
   }
 
   @media (min-width: 444px) {
     .responsive-heading {
       font-size: 28px;
-      font-family: 'Custom-Centaur';
+      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     }
   }
 
   @media (min-width: 498px) {
     .responsive-heading {
       font-size: 30px;
-      font-family: 'Custom-Centaur';
+      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     }
   }
 
   @media (min-width: 498px) {
     .responsive-heading {
       font-size: 34px;
-      font-family: 'Custom-Centaur';
+      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     }
   }
 
   @media (min-width: 600px) {
     .responsive-heading {
       font-size: 40px;
-      font-family: 'Custom-Centaur';
+      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
     }
   }
   
