--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,12 @@
 /********** Template CSS **********/
-@font-face{
-    font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
-    src: url('/assets/fonts/centaur-webfont.woff2') format('woff2'),
-         url('/assets/fonts/centaur-webfont.woff') format('woff');
-    font-weight: 400;
-}
+
 
 :root {
-    --primary: #FEA116;
+    --primary: #ba6568;
     --light: #F1F8FF;
     --dark: #0F172B;
+    --light-dark: #635f5f;
+    --grand-malabar-primary-color: #622a35;
 }
 
 .ff-secondary {
@@ -164,6 +161,16 @@
     background-repeat: no-repeat;
     background-size: 80%;
 }
+
+@media (min-width: 1200px) {
+    .hero-header {
+        background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/gmHome.jpeg);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: 60%;
+    }
+}
+  
 
 .hero-header img {
     animation: imgRotate 50s linear infinite;
@@ -550,35 +557,46 @@
   
   .responsive-heading {
     font-size: 14px; 
-    font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
+    font-family: 'Centaur', 'Times New Roman', Times, serif;
   }
 
   @media (min-width: 200px) {
     .responsive-heading {
-      font-size: 15px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
-    }
-
-    .navbar-toggler {
-        padding:0.05rem 0.20rem;
-    }
-  }
-
-  @media (min-width: 340px) {
-    .responsive-heading {
-      font-size: 15px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
-    }
-
-    .navbar-toggler {
-        padding:0.05rem 0.20rem;
-    }
-  }
-
-  @media (min-width: 357px) {
-    .responsive-heading {
       font-size: 18px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
+    }
+
+    .navbar-toggler {
+        padding:0.05rem 0.20rem;
+    }
+  }
+
+  @media (min-width: 330px) {
+    .responsive-heading {
+      font-size: 20px;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
+    }
+
+    .navbar-toggler {
+        padding:0.05rem 0.20rem;
+    }
+  }
+
+  @media (min-width: 347px) {
+    .responsive-heading {
+      font-size: 22px;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
+    }
+
+    .navbar-toggler {
+        padding:0.05rem 0.20rem;
+    }
+  }
+
+  @media (min-width: 365px) {
+    .responsive-heading {
+      font-size: 24px;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
     }
 
     .navbar-toggler {
@@ -586,10 +604,10 @@
     }
   }
 
-  @media (min-width: 374px) {
+  @media (min-width: 380px) {
     .responsive-heading {
-      font-size: 20px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
+      font-size: 26px;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
     }
 
     .navbar-toggler {
@@ -599,8 +617,8 @@
 
   @media (min-width: 392px) {
     .responsive-heading {
-      font-size: 22px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
+      font-size: 26px;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
     }
 
     .navbar-toggler {
@@ -610,8 +628,8 @@
 
   @media (min-width: 410px) {
     .responsive-heading {
-      font-size: 24px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
+      font-size: 26px;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
     }
 
     .navbar-toggler {
@@ -622,7 +640,7 @@
   @media (min-width: 428px) {
     .responsive-heading {
       font-size: 26px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
     }
 
     .navbar-toggler {
@@ -633,7 +651,7 @@
   @media (min-width: 444px) {
     .responsive-heading {
       font-size: 28px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
     }
 
     .navbar-toggler {
@@ -644,7 +662,7 @@
   @media (min-width: 498px) {
     .responsive-heading {
       font-size: 30px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
     }
 
     .navbar-toggler {
@@ -655,7 +673,7 @@
   @media (min-width: 498px) {
     .responsive-heading {
       font-size: 34px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
     }
 
     .navbar-toggler {
@@ -666,7 +684,7 @@
   @media (min-width: 600px) {
     .responsive-heading {
       font-size: 40px;
-      font-family: 'Custom-Centaur', 'Times New Roman', Times, serif;
+      font-family: 'Centaur', 'Times New Roman', Times, serif;
     }
 
     .navbar-toggler {
@@ -683,3 +701,179 @@
         padding:0.25rem 0.75rem;
     }
   }
+
+  .navbar-dark-custom .navbar-brand {
+    color:#fff
+  }
+  .navbar-dark-custom .navbar-brand:hover,.navbar-dark-custom .navbar-brand:focus {
+    color:#fff
+  }.navbar-dark-custom .navbar-nav .nav-link-custom { 
+    color:rgba(89, 12, 12,0.55)
+  }
+  .navbar-dark-custom .navbar-nav .nav-link-custom:hover,.navbar-dark-custom .navbar-nav .nav-link-custom:focus {
+    color:rgba(89, 12, 12,0.75)
+  }
+  .navbar-dark-custom .navbar-nav .nav-link-custom.disabled {
+    color:rgba(89, 12, 12,0.25) 
+  }
+  .navbar-dark-custom .navbar-nav .show>.nav-link-custom,.navbar-dark-custom .navbar-nav .nav-link-custom.active { 
+    color:#fff
+  }
+  .navbar-dark-custom .navbar-toggler {
+    color:rgba(89, 12, 12,0.55);border-color:rgba(89, 12, 12,0.1)
+  }
+  .navbar-dark-custom .navbar-toggler-icon {
+    background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2889, 12, 12,0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") 
+  }
+  .navbar-dark-custom .navbar-text {
+    color:rgba(89, 12, 12,0.55)
+  }
+  .navbar-dark-custom .navbar-text a,.navbar-dark-custom .navbar-text a:hover,.navbar-dark-custom .navbar-text a:focus {
+    color:#fff
+  }
+
+  .navbar-dark-custom .navbar-nav .nav-link-custom {
+    position: relative;
+    margin-left: 25px;
+    padding: 35px 0;
+    font-size: 15px;
+    color: var(--light-dark) !important;
+    text-transform: uppercase;
+    font-weight: 500;
+    outline: none;
+    transition: .5s;
+}
+
+.sticky-top.navbar-dark-custom .navbar-nav .nav-link-custom {
+    padding: 35px 0;
+}
+
+.navbar-dark-custom .navbar-nav .nav-link-custom:hover,
+.navbar-dark-custom .navbar-nav .nav-link-custom.active {
+    color: var(--grand-malabar-primary-color) !important;
+}
+
+.navbar-dark-custom .navbar-brand img {
+    max-height: 60px;
+    transition: .5s;
+}
+
+.sticky-top.navbar-dark-custom .navbar-brand img {
+    max-height: 60px;
+}
+
+@media (max-width: 991.98px) {
+    .sticky-top.navbar-dark-custom {
+        position: relative;
+    }
+
+    .navbar-dark-custom .navbar-collapse {
+        margin-top: 15px;
+        border-top: 1px solid rgba(255, 255, 255, .1)
+    }
+
+    .navbar-dark-custom .navbar-nav .nav-link-custom,
+    .sticky-top.navbar-dark-custom .navbar-nav .nav-link-custom {
+        padding: 10px 0;
+        margin-left: 0;
+    }
+
+    .navbar-dark-custom .navbar-brand img {
+        max-height: 60px;
+    }
+}
+
+@media (min-width: 992px) {
+    .navbar-dark-custom {
+        position: absolute;
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: 999;
+        background: transparent !important;
+    }
+    
+    .sticky-top.navbar-dark-custom {
+        position: fixed;
+        background: var(--dark) !important;
+    }
+}
+
+  .nav-item.show .nav-link-custom {
+    color:#495057;
+    background-color:#F1F8FF;
+    border-color:#dee2e6 #dee2e6 #F1F8FF
+  }
+  .nav-tabs .dropdown-menu {
+    margin-top:-1px;
+    border-top-left-radius:0;
+    border-top-right-radius:0
+  }
+  .nav-pills .nav-link-custom {
+    background:none; 
+    border:0;
+    border-radius:2px
+  } 
+  .nav-pills .nav-link-custom.active,.nav-pills .show>.nav-link-custom {
+    color:#fff;
+    background-color:#622a35;
+  }
+  .nav-fill>.nav-link-custom,.nav-fill .nav-item {
+    flex:1 1 auto;
+    text-align:center 
+  }
+  .nav-justified>.nav-link-custom,.nav-justified .nav-item {
+    flex-basis:0;
+    flex-grow:1;
+    text-align:center 
+  }
+  .nav-fill .nav-item .nav-link-custom,.nav-justified .nav-item .nav-link-custom {
+    width:100%
+  }
+
+  .footer .copyright-custom {
+    padding: 25px 0;
+    font-size: 15px;
+    border-top: 1px solid rgba(256, 256, 256, .1);
+}
+
+.footer .copyright-custom  a {
+    color: var(--light);
+}
+
+.text-grand-malabar-color {
+    color: #d8b6bd !important;
+}
+
+.btn-primary-custom {
+    color:#622a35;
+    background-color:#dbd3d3;
+    border-color:#dbd3d3
+ }
+.btn-primary-custom:hover {
+    color:#000;
+    background-color:#ba6568;
+    border-color:#ba6568
+}
+.btn-check:focus+.btn-primary-custom,.btn-primary-custom:focus {
+    color:#000;
+    background-color:#ba6568;
+    border-color:#e53f08;
+    box-shadow:0 0 0 .25rem rgba(216,137,19,0.5)
+}
+.btn-check:checked+.btn-primary-custom,.btn-check:active+.btn-primary-custom,.btn-primary-custom:active,.btn-primary-custom.active,.show>.btn-primary-custom.dropdown-toggle {
+    color:#000;background-color:#ba6568;border-color:#e53f08
+}
+.btn-check:checked+.btn-primary-custom:focus,.btn-check:active+.btn-primary-custom:focus,.btn-primary-custom:active:focus,.btn-primary-custom.active:focus,.show>.btn-primary-custom.dropdown-toggle:focus {
+    box-shadow:0 0 0 .25rem rgba(216,137,19,0.5)
+}
+.btn-primary-custom:disabled,.btn-primary-custom.disabled {
+    color:#000;background-color:#ba6568;border-color:#ba6568
+}
+.text-gm-primary{
+    color: #622a35;
+}
+
+.paragraph-text {
+    text-align: justify;
+}
