--- a/css/style.css
+++ b/css/style.css
@@ -771,7 +771,7 @@
     width: 100%;
     height: 600px;
     display: flex;
-    transition: transform 4s ease-in-out, opacity 1s ease-in-out;
+    /* transition: transform 4s ease-in-out, opacity 1s ease-in-out; */
 }
 
 .mySlides {
@@ -781,9 +781,25 @@
     position: relative;
 }
 
+ /* Keyframe animation for the zoom-in effect */
+@keyframes headerZoomIn {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1.2); /* Adjust the scale factor for the zoom level */
+    }
+  }
+  
+  /* Apply the zoom-in effect on the image with the 'header-zoomed' class */
+  .mySlides img.header-zoomed {
+    animation: headerZoomIn 10s forwards; /* Use forwards to retain the final state of the animation */
+  }
+
 .mySlides img {
     width: 100%;
     height: 600px;
+    display: block;
     object-fit: cover;
 }
 
@@ -804,6 +820,58 @@
     width: 280px; /* Set the width of your logo */
     height: 300px; /* Set the height of your logo */
 }
+
+/* Wave annimation */
+.wave-header {
+    position:absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(56, 179, 241, 0.321) 100%);
+}
+
+.waves {
+    position:relative;
+    width: 100%;
+    height:15vh;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+    max-height:150px;
+  }
+  .parallax > use {
+    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+  }
+  .parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+  .parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+  .parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+  .parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+  @keyframes move-forever {
+    0% {
+     transform: translate3d(-90px,0,0);
+    }
+    100% { 
+      transform: translate3d(85px,0,0);
+    }
+  }
+
+  @media (max-width: 768px) {
+    .waves {
+      height:80px;
+      min-height:40px;
+    }
+  }
 /* Main Div Design - END  */
 
 /* Second Image Div Container - START*/
@@ -848,7 +916,7 @@
 /* Footer Div - Start */
 .footer {
     position: relative;
-    background-image: url('../img/Brick-wall.jpeg');
+    background-image: url('../img/footer.jpeg');
     background-size: cover;
     background-position: center;
     padding: 50px;
